Feature/authenticate (#4)
* modified profile

* update swagger
